# skim_kernel

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  MakeFile  Makefile  docker-compose-db.yml  main.py  pyproject.toml  requirements.txt  temp.py  test_queue_producer.py  test_summarizer.py
.claude/: SESSION_SUMMARY.md
.claude/agents/: senior-engineering-consultant.md
article_extractors/core/: base_extractor.py
config/: config.py  constants.py  env.py
database/: connection.py  table_names.py
database/models/: models.py
database/repository/: pre_summarized_articles.py  raw_articles.py  repository_base.py  summarized_articles.py
llm_explorer/: base_summarizer.py  main.py  openrouter_summarizer.py  summarizer_factory.py
llm_handler/: model_handler.py
migrations/: env.py
migrations/versions/: a50957c42d8a_temp_change_datetime_to_string_in_pub_.py  e77378577661_create_a_baseline_migrations.py
msg_queue/: handler.py  queue_handler.py
news_sites/: settings.py  times_of_india.py
news_sites/news_sites_scrap/news_sites/: items.py  middlewares.py  settings.py
news_sites/news_sites_scrap/news_sites/spiders/: times_of_indiia.py
rss_feeds/: bbc_news_articles.json  hindu_articles.json  india_today_articles.json  main.py  toi_articles.json
rss_feeds/config/: feed_urls.py
rss_feeds/core/: aggregrator.py  base_parser.py
rss_feeds/parsers/: bbc_parser.py  india_today_parser.py  the_hindu_parser.py  toi_parser.py
scraper/: main.py  scrap_handler.py
scraper/pre_processing/: base_pre_processing.py  news.txt  toi_pre_processing.py
scraper/pre_processing/toi/: toi_pre_processing.py
scripts/: db_migrations.sh
